tests/typechecking/call_labeled_error.june
// error: expected name 'x'

fun foo(x: i64) {
    println(x)
}

// Wrong label in call
foo(u: 99)